* io.c (rb_io_each_byte): rbuf can be refreshed during yield.   [Bug #5119]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@32758 b2dd03c8-39d4-4d8f-98ff-823fe69b080e